--- a/03 Basic Scene/index.html
+++ b/03 Basic Scene/index.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>03 - Basic Scene</title>
   </head>
+  <style>
+    body {
+      width: 100%;
+      height: 100dvh;
+      margin: 0;
+    }
+    * {
+      box-sizing: border-box;
+    }
+  </style>
   <body>
+    <canvas class="webgl"></canvas>
     <script src="./three.min.js"></script>
     <script src="./script.js"></script>
   </body>
