Live Page Routes Set for Production

--- a/src/03-basic-scene/index.html
+++ b/src/03-basic-scene/index.html
@@ -16,8 +16,9 @@
     }
   </style>
   <body>
+    <h1>This Will Stop Working With Three.js r160+</h1>
     <canvas class="webgl"></canvas>
-    <script src="./three.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="https://threejs.org/build/three.js"></script>
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
