--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body
-    class="bg-black text-white flex-col lg:px-8 space-y-8 px-4 py-4 flex items-center justify-center w-full"
+    class="flex flex-col items-center justify-center w-full px-4 py-4 space-y-8 text-white bg-black lg:px-8"
   >
-    <h1 class="font-bold text-3xl text-center">
+    <h1 class="text-3xl font-bold text-center">
       Link to All The Three.js Journey Modules I Learnt Till Now
     </h1>
-    <ul class="w-full lg:px-8 px-4">
-      <li class="py-3 w-full text-center">
+    <ul class="w-full px-4 lg:px-8">
+      <li class="w-full py-3 text-center">
         <hr />
         <div class="py-2 text-xl">Boring Stuff</div>
         <hr />
@@ -38,7 +38,7 @@
           >6. Animations</a
         >
       </li>
-      <li class="py-3 w-full text-center">
+      <li class="w-full py-3 text-center">
         <hr />
         <div class="py-2 text-xl">
           From 7th Onwards You Can Rotate Camera with Left Mouse Click, Move
@@ -73,7 +73,7 @@
           >11. Textures</a
         >
       </li>
-      <li class="py-3 w-full text-center">
+      <li class="w-full py-3 text-center">
         <hr />
         <div class="py-2 text-xl">Cool Stuff Starts Here</div>
         <hr />
