Index Typos Fixed

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
         >
       </li>
       <li>
-        <a href="/14-go-live/dist/index.html" class="hover:underline"
+        <a href="/14-go-live/src/index.html" class="hover:underline"
           >14. Go Live</a
         >
       </li>
