--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,16 @@
           >14. Go Live</a
         >
       </li>
+      <li class="w-full py-3 text-center">
+        <hr />
+        <div class="py-2 text-xl">Classic Techniques Starts Here</div>
+        <hr />
+      </li>
+      <li>
+        <a href="/15-lights/src/index.html" class="hover:underline"
+          >15. Lights</a
+        >
+      </li>
     </ul>
   </body>
 </html>
