--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,11 @@
           >15. Lights</a
         >
       </li>
+      <li>
+        <a href="/16-shadows/src/index.html" class="hover:underline"
+          >16. Shadows</a
+        >
+      </li>
     </ul>
   </body>
 </html>
