--- a/src/index.html
+++ b/src/index.html
@@ -108,6 +108,11 @@
           >16. Shadows</a
         >
       </li>
+      <li>
+        <a href="/17-haunted-house/src/index.html" class="hover:underline"
+          >17. Haunted House</a
+        >
+      </li>
     </ul>
   </body>
 </html>
