--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,11 @@
           >17. Haunted House</a
         >
       </li>
+      <li>
+        <a href="/18-particles/src/index.html" class="hover:underline"
+          >18. Particles</a
+        >
+      </li>
     </ul>
   </body>
 </html>
