--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,11 @@
           >18. Particles</a
         >
       </li>
+      <li>
+        <a href="/19-galaxy-generator/src/index.html" class="hover:underline"
+          >19. Galaxy Generator</a
+        >
+      </li>
     </ul>
   </body>
 </html>
