--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,13 @@
           >19. Galaxy Generator</a
         >
       </li>
+      <li>
+        <a
+          href="/20-scroll-based-animation/src/index.html"
+          class="hover:underline"
+          >20. Scroll Based Animation</a
+        >
+      </li>
     </ul>
   </body>
 </html>
