--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,16 @@
           >20. Scroll Based Animation</a
         >
       </li>
+      <li class="w-full py-3 text-center">
+        <hr />
+        <div class="py-2 text-xl">Advanced Techniques Starts Here</div>
+        <hr />
+      </li>
+      <li>
+        <a href="/21-physics/src/index.html" class="hover:underline"
+          >21. Physics</a
+        >
+      </li>
     </ul>
   </body>
 </html>
