--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,11 @@
           >21. Physics</a
         >
       </li>
+      <li>
+        <a href="/22-imported-models/src/index.html" class="hover:underline"
+          >22. Imported Models</a
+        >
+      </li>
     </ul>
   </body>
 </html>
