--- a/src/index.html
+++ b/src/index.html
@@ -19,24 +19,24 @@
         <hr />
       </li>
       <li>
-        <a href="/03-basic-scene/index.html" class="hover:underline"
-          >3. Basic Scene</a
-        >
+        <a href="/03-basic-scene/index.html" class="hover:underline">
+          3. Basic Scene
+        </a>
       </li>
       <li>
-        <a href="/04-local-server/src/index.html" class="hover:underline"
-          >4. Local Server</a
-        >
+        <a href="/04-local-server/src/index.html" class="hover:underline">
+          4. Local Server
+        </a>
       </li>
       <li>
-        <a href="/05-transform-objects/src/index.html" class="hover:underline"
-          >5. Transform Objects</a
-        >
+        <a href="/05-transform-objects/src/index.html" class="hover:underline">
+          5. Transform Objects
+        </a>
       </li>
       <li>
-        <a href="/06-animations/src/index.html" class="hover:underline"
-          >6. Animations</a
-        >
+        <a href="/06-animations/src/index.html" class="hover:underline">
+          6. Animations
+        </a>
       </li>
       <li class="w-full py-3 text-center">
         <hr />
@@ -47,31 +47,32 @@
         <hr />
       </li>
       <li>
-        <a href="/07-cameras/src/index.html" class="hover:underline"
-          >7. Cameras</a
-        >
+        <a href="/07-cameras/src/index.html" class="hover:underline">
+          7. Cameras
+        </a>
       </li>
       <li>
         <a
           href="/08-fullscreen-and-resizing/src/index.html"
           class="hover:underline"
-          >8. FullScreen and Resizing</a
         >
+          8. FullScreen and Resizing
+        </a>
       </li>
       <li>
-        <a href="/09-geometries/src/index.html" class="hover:underline"
-          >9. Geometries</a
-        >
+        <a href="/09-geometries/src/index.html" class="hover:underline">
+          9. Geometries
+        </a>
       </li>
       <li>
-        <a href="/10-debug-ui/src/index.html" class="hover:underline"
-          >10. Debug UI</a
-        >
+        <a href="/10-debug-ui/src/index.html" class="hover:underline">
+          10. Debug UI
+        </a>
       </li>
       <li>
-        <a href="/11-textures/src/index.html" class="hover:underline"
-          >11. Textures</a
-        >
+        <a href="/11-textures/src/index.html" class="hover:underline">
+          11. Textures
+        </a>
       </li>
       <li class="w-full py-3 text-center">
         <hr />
@@ -79,19 +80,19 @@
         <hr />
       </li>
       <li>
-        <a href="/12-materials/src/index.html" class="hover:underline"
-          >12. Materials</a
-        >
+        <a href="/12-materials/src/index.html" class="hover:underline">
+          12. Materials
+        </a>
       </li>
       <li>
-        <a href="/13-3d-text/src/index.html" class="hover:underline"
-          >13. 3D Text</a
-        >
+        <a href="/13-3d-text/src/index.html" class="hover:underline">
+          13. 3D Text
+        </a>
       </li>
       <li>
-        <a href="/14-go-live/src/index.html" class="hover:underline"
-          >14. Go Live</a
-        >
+        <a href="/14-go-live/src/index.html" class="hover:underline">
+          14. Go Live
+        </a>
       </li>
       <li class="w-full py-3 text-center">
         <hr />
@@ -99,36 +100,37 @@
         <hr />
       </li>
       <li>
-        <a href="/15-lights/src/index.html" class="hover:underline"
-          >15. Lights</a
-        >
+        <a href="/15-lights/src/index.html" class="hover:underline">
+          15. Lights
+        </a>
       </li>
       <li>
-        <a href="/16-shadows/src/index.html" class="hover:underline"
-          >16. Shadows</a
-        >
+        <a href="/16-shadows/src/index.html" class="hover:underline">
+          16. Shadows
+        </a>
       </li>
       <li>
-        <a href="/17-haunted-house/src/index.html" class="hover:underline"
-          >17. Haunted House</a
-        >
+        <a href="/17-haunted-house/src/index.html" class="hover:underline">
+          17. Haunted House
+        </a>
       </li>
       <li>
-        <a href="/18-particles/src/index.html" class="hover:underline"
-          >18. Particles</a
-        >
+        <a href="/18-particles/src/index.html" class="hover:underline">
+          18. Particles
+        </a>
       </li>
       <li>
-        <a href="/19-galaxy-generator/src/index.html" class="hover:underline"
-          >19. Galaxy Generator</a
-        >
+        <a href="/19-galaxy-generator/src/index.html" class="hover:underline">
+          19. Galaxy Generator
+        </a>
       </li>
       <li>
         <a
           href="/20-scroll-based-animation/src/index.html"
           class="hover:underline"
-          >20. Scroll Based Animation</a
         >
+          20. Scroll Based Animation
+        </a>
       </li>
       <li class="w-full py-3 text-center">
         <hr />
@@ -136,14 +138,22 @@
         <hr />
       </li>
       <li>
-        <a href="/21-physics/src/index.html" class="hover:underline"
-          >21. Physics</a
-        >
+        <a href="/21-physics/src/index.html" class="hover:underline">
+          21. Physics
+        </a>
       </li>
       <li>
-        <a href="/22-imported-models/src/index.html" class="hover:underline"
-          >22. Imported Models</a
+        <a href="/22-imported-models/src/index.html" class="hover:underline">
+          22. Imported Models
+        </a>
+      </li>
+      <li>
+        <a
+          href="/23-raycaster-and-mouse-events/src/index.html"
+          class="hover:underline"
         >
+          23. Raycaster and Mouse Events
+        </a>
       </li>
     </ul>
   </body>
